{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 23,
  "lineage": "22406e95-398a-32eb-2656-ff3e9b5f75d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2288ef45fd1bae2",
            "arn": "arn:aws:ec2:us-east-2:905418319365:elastic-ip/eipalloc-0d2288ef45fd1bae2",
            "association_id": "eipassoc-0832a0f58f02ebd65",
            "domain": "vpc",
            "id": "eipalloc-0d2288ef45fd1bae2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0387e216db6105c8b",
            "private_dns": "ip-10-0-0-215.us-east-2.compute.internal",
            "private_ip": "10.0.0.215",
            "public_dns": "ec2-3-139-128-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.128.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0649bea3443ede307",
            "arn": "arn:aws:ec2:us-east-2:905418319365:instance/i-05d814e07f410b6bf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d814e07f410b6bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e18785420529323",
            "private_dns": "ip-10-0-0-234.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08679ea9557305101",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0436be0ca1504f2a6",
            "tags": {
              "Name": "cust-EC2-1"
            },
            "tags_all": {
              "Name": "cust-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041d4c1aa07e2284d"
            ]
          },
          "dependencies": [
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0649bea3443ede307",
            "arn": "arn:aws:ec2:us-east-2:905418319365:instance/i-0d6d19158982b8bd9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6d19158982b8bd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c94af8b1bc9757af",
            "private_dns": "ip-10-0-1-236.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e461cbf77663fcc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074daada0351c4e10",
            "tags": {
              "Name": "cust-private-EC2-1"
            },
            "tags_all": {
              "Name": "cust-private-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041d4c1aa07e2284d"
            ]
          },
          "dependencies": [
            "aws_subnet.dev-private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:internet-gateway/igw-05ddf00348cd08f78",
            "id": "igw-05ddf00348cd08f78",
            "owner_id": "905418319365",
            "tags": {
              "Name": "cust_ig"
            },
            "tags_all": {
              "Name": "cust_ig"
            },
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2288ef45fd1bae2",
            "association_id": "eipassoc-0832a0f58f02ebd65",
            "connectivity_type": "public",
            "id": "nat-09bd766d0991d53d4",
            "network_interface_id": "eni-0387e216db6105c8b",
            "private_ip": "10.0.0.215",
            "public_ip": "3.139.128.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0436be0ca1504f2a6",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_internet_gateway.dev",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:route-table/rtb-0265d2e0881e58f19",
            "id": "rtb-0265d2e0881e58f19",
            "owner_id": "905418319365",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ddf00348cd08f78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router-pub"
            },
            "tags_all": {
              "Name": "router-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:route-table/rtb-0f67174a0a51baa4d",
            "id": "rtb-0f67174a0a51baa4d",
            "owner_id": "905418319365",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09bd766d0991d53d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router-private"
            },
            "tags_all": {
              "Name": "router-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev",
            "aws_internet_gateway.dev",
            "aws_nat_gateway.dev",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100408d4bed4f90c",
            "route_table_id": "rtb-0265d2e0881e58f19",
            "subnet_id": "subnet-0436be0ca1504f2a6"
          },
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_route_table.dev",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed3757aaf6fae1ff",
            "route_table_id": "rtb-0f67174a0a51baa4d",
            "subnet_id": "subnet-074daada0351c4e10"
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_internet_gateway.dev",
            "aws_nat_gateway.dev",
            "aws_route_table.dev-private",
            "aws_subnet.dev",
            "aws_subnet.dev-private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:security-group/sg-05c70beb8ad5f3a36",
            "description": "ssh and http inboud rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c70beb8ad5f3a36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cust_security_group",
            "name_prefix": "",
            "owner_id": "905418319365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_sg"
            },
            "tags_all": {
              "Name": "dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:subnet/subnet-0436be0ca1504f2a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0436be0ca1504f2a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cust_subnet_pub"
            },
            "tags_all": {
              "Name": "cust_subnet_pub"
            },
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:subnet/subnet-074daada0351c4e10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074daada0351c4e10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cust_subnet_private"
            },
            "tags_all": {
              "Name": "cust_subnet_private"
            },
            "vpc_id": "vpc-093d7ce1fb6763f60"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418319365:vpc/vpc-093d7ce1fb6763f60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e69bffed5d84a19e",
            "default_route_table_id": "rtb-06afd052b6ff36391",
            "default_security_group_id": "sg-041d4c1aa07e2284d",
            "dhcp_options_id": "dopt-085a0c1c4560e2a44",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093d7ce1fb6763f60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06afd052b6ff36391",
            "owner_id": "905418319365",
            "tags": {
              "Name": "cust_vpc"
            },
            "tags_all": {
              "Name": "cust_vpc"
            }
          }
        }
      ]
    }
  ]
}